# tauri-plugin-playa

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
guest-js/: index.ts
mpv_config/: README.md  input.conf  mpv.conf
mpv_config/script-opts/: uosc.conf
mpv_config/scripts/: uosc.lua
mpv_config/scripts/uosc/: main.lua
mpv_config/scripts/uosc/char-conv/: en.json
mpv_config/scripts/uosc/elements/: TopBar.lua
mpv_config/scripts/uosc/lib/: char_conv.lua  intl.lua
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: control.toml  get_info.toml  list_presets.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
src/core/: mod.rs
src/core/config/: ipc.rs  mod.rs
src/core/player/: events.rs  ipc.rs  mod.rs  process.rs
src/core/plugin/: mod.rs
src/core/presets/: config.rs  mod.rs
src/core/presets/platform/: detection.rs  mod.rs
