[package]
name = "tauri-plugin-playa"
version = "0.1.0"
authors = ["0xmrwn <niches-anode0k@icloud.com>"]
description = "A Tauri plugin for video playback using mpv"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-playa"

[dependencies]
tauri = { version = "2.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11.6"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
lazy_static = "1.4.0"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "winnt"] }
